Fix assembly name conflict!

--- a/Queryable.Web/Views/Home/Add.cshtml
+++ b/Queryable.Web/Views/Home/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Search";
 }
-@model global::Queryable.Models.Person
+@model global::Queryable.Web.Models.Person
 <h2>Search</h2>
 
 
