--- a/Queryable.Web/Views/Home/Index.cshtml
+++ b/Queryable.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
-@model IEnumerable<global::Queryable.Models.Person>
+@model IEnumerable<global::Queryable.Web.Models.Person>
 <h2>People</h2>
 
 <table class="table table-striped">
