--- a/Queryable.Web/Views/Home/Search.cshtml
+++ b/Queryable.Web/Views/Home/Search.cshtml
@@ -1,23 +1,27 @@
 ﻿@{
     ViewBag.Title = "Search";
 }
-@model global::Queryable.Models.PersonSearchModel
+@model global::Queryable.Web.Models.PersonSearchModel
 <h2>Search</h2>
 
 
-@using (Html.BeginForm("SearchResults", "Home", FormMethod.Get))
+@using (Html.BeginForm("SearchResults", "Home", FormMethod.Get, new Dictionary<string, object>{{"role", "form"}}))
 {
-    <div>
+    <div class="form-group">
         @Html.LabelFor(m => m.FirstName)
-        @Html.TextBoxFor(m => m.FirstName)
+        @Html.TextBoxFor(m => m.FirstName, new Dictionary<string, object>{{"class", "form-control"}})
     </div>
-    <div>
+    <div class="form-group">
         @Html.LabelFor(m => m.LastName)
-        @Html.TextBoxFor(m => m.LastName)
+        @Html.TextBoxFor(m => m.LastName, new Dictionary<string, object>{{"class", "form-control"}})
     </div>
-    <div>
+    <div class="form-group">
         @Html.LabelFor(m => m.DateOfBirth)
-        @Html.TextBoxFor(m => m.DateOfBirth)
+        @Html.TextBoxFor(m => m.DateOfBirth, new Dictionary<string, object>{{"class", "form-control"}})
     </div>
-    <input type="submit" value="GO" class="btn"/>
+    <div class="form-group">
+        <input type="submit" value="Search" class="btn pull-right"/>
+        @Html.ActionLink("Home", "Index", "Home", null, new {@class = "btn btn-default", role = "button"})
+        
+    </div>
 }
